tests/fixtures/negative/lossy_topic_without_gap_tolerance.wrela
// expect: SEM0041: gap topic counter requires a gap-tolerant executor policy
module negative.lossy_topic_without_gap_tolerance

module machine.x86_64.cpu_state
data SlotIdentity { label: StringLiteral }
data ExecutorSlot { id: U64 }
class ExecutorRegistry { fn claim(self, identity: SlotIdentity) -> ExecutorSlot { return ExecutorSlot(id = 0) } }

module machine.x86_64.executor_loop
class NoGapRequiredPolicy {}

module machine.x86_64.topic
use { ExecutorSlot } from machine.x86_64.cpu_state
data TopicIdentity { label: StringLiteral }
class Topic<T> { identity: TopicIdentity; asm fn subscribe(self, subscriber: ExecutorSlot) -> TopicSubscription<T> { ret } }
data TopicSubscription<T> { topic: Topic<T>; subscriber: ExecutorSlot }

module negative.lossy_topic_without_gap_tolerance.app
use { ExecutorRegistry, ExecutorSlot, SlotIdentity } from machine.x86_64.cpu_state
use { NoGapRequiredPolicy } from machine.x86_64.executor_loop
use { Topic, TopicIdentity, TopicSubscription } from machine.x86_64.topic

executor Worker {
    slot: ExecutorSlot
    loop: NoGapRequiredPolicy
    input: TopicSubscription<U64>
    start fn run(self) -> never { while true {} }
}

image Bad {
    transitions { delegated_hardware -> owned_hardware }
    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware { return hardware.exit_to_owned_hardware() }
    phase owned_hardware(hardware: OwnedHardware) -> never {
        let slot = ExecutorRegistry().claim(identity = SlotIdentity(label = "worker"))
        let topic = Topic<U64>(identity = TopicIdentity(label = "counter"))
        let sub = topic.subscribe(subscriber = slot)
        let worker = Worker(slot = slot, loop = NoGapRequiredPolicy(), input = sub)
        while true {}
    }
}
